--- a/frontend/src/Components/Authentication/LoginSignup.css
+++ b/frontend/src/Components/Authentication/LoginSignup.css
@@ -1,6 +1,6 @@
 .LoginSignUpContainer {
     width: 100vw;
-    height: calc(60vh-350px);
+    height: 100vh;
     max-width: 100%;
     display: flex;
     justify-content: flex-end;
@@ -10,7 +10,9 @@
     background-repeat: no-repeat;
     background-position: left;
     background-position-x: 10%;
-    background-size: 60vh;
+    background-size: 80vh;
+    position: fixed;
+   
     top: 0%;
     left: 0;
   }
@@ -21,7 +23,7 @@
     padding: 10px;
     margin-right: 20%;
     width: 25vw;
-    height: 50vh;
+    height: 70vh;
     overflow: hidden;
     box-shadow: 15px 15px 15px rgba(219, 213, 213, 0.2), 
     -15px 15px 15px rgba(0,0,0,0.1);
